--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@material-ui/icons": "^1.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-scroll": "^1.7.10"
   },
   "scripts": {
     "start": "react-scripts start",
